--- a/css/style.css
+++ b/css/style.css
@@ -24,12 +24,18 @@ body {
   font-family: roboto, sans-serif;
 }
 
+/* Секция */
+.section {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+
 /* Контейнер */
 .container {
   margin-right: auto;
   margin-left: auto;
-  padding-left: 15px;
   padding-right: 15px;
+  padding-left: 15px;
   width: 1200px;
 }
 
@@ -65,6 +71,11 @@ body {
   letter-spacing: 0.02em;
 }
 
+/* Убираем лишнее 4рх у картинок */
+.item-img {
+  display: block;
+}
+
 /* Одинаковые сили для акцентов */
 .accent {
   color: var(--accent-color);
@@ -77,16 +88,35 @@ body {
 }
 
 .header .container {
+  display: flex;
+  align-items: center;
   outline: 1px solid tomato;
+}
+
+.header-nav {
+  display: flex;
+  align-items: center;
 }
 
 /* logo */
 .header .logo {
+  margin-right: 93px;
   color: var(--primary-text-color);
 }
 
 /* Главная навигация */
+.header .site-nav {
+  display: flex;
+}
+
+.site-nav .item:not(:last-child) {
+  margin-right: 50px;
+}
+
 .site-nav .list {
+  display: block;
+  padding-top: 32px;
+  padding-bottom: 32px;
   color: var(--primary-text-color);
 }
 
@@ -96,6 +126,11 @@ body {
 }
 
 /* Наши контакты */
+.header .site-contact {
+  display: flex;
+  margin-left: auto;
+}
+
 .site-contact .list {
   color: var(--secondary-text-color);
 }
@@ -103,6 +138,10 @@ body {
 .site-contact .list:hover,
 .site-contact .list:focus {
   color: var(--accent-color);
+}
+
+.site-contact .item:not(:last-child) {
+  margin-right: 50px;
 }
 
 /* ----Уникальный контент стрыницы---- */
@@ -144,8 +183,6 @@ body {
 
 /* Преимущества компании */
 .advant .container {
-  padding-top: 94px;
-  padding-bottom: 94px;
   outline: 1px solid black;
 }
 
@@ -170,6 +207,10 @@ body {
 }
 
 /* Чем мы занимаемся */
+.directions.section {
+  padding-top: 0;
+}
+
 .directions .container {
   outline: 1px solid blue;
 }
@@ -189,7 +230,14 @@ body {
   background-color: #f5f4fa;
 }
 
+.our-team .container {
+  outline: 1px solid brown;
+}
+
 .our-team .title {
+  margin-top: 0;
+  margin-bottom: 50px;
+
   font-weight: 700;
   font-size: 36px;
   line-height: 1.17;
@@ -198,11 +246,20 @@ body {
 
 .our-team .item {
   width: 270px;
-  height: 368px;
+  padding-bottom: 30px;
+
+  text-align: center;
   background-color: var(--secondary-white-color);
 }
 
+.our-team .item-img {
+  margin-bottom: 30px;
+}
+
 .our-team .name {
+  margin-top: 0;
+  margin-bottom: 10px;
+
   font-weight: 500;
   font-size: 16px;
   line-height: 1.19;
@@ -210,6 +267,8 @@ body {
 }
 
 .our-team .profession {
+  margin: 0;
+
   font-size: 16px;
   line-height: 1.19;
   letter-spacing: 0.03em;
@@ -221,18 +280,33 @@ body {
   background-color: var(--primery-black-color);
 }
 
+.footer .container {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  outline: 1px solid red;
+}
+
 /* logo */
 .footer .logo {
+  display: inline-block;
+  margin-bottom: 20px;
   color: var(--secondary-white-color);
+  background-color: blue;
 }
 
 /* Адрес города и улицы */
 .city-street {
+  margin: 0;
   font-style: normal;
   font-size: 14px;
   line-height: 1.7;
   letter-spacing: 0.03em;
   color: var(--secondary-white-color);
+  background-color: red;
+}
+
+.footer-contacts {
+  margin: 0;
 }
 
 /* Наши контакты в подвале страницы */
