--- a/css/style.css
+++ b/css/style.css
@@ -131,7 +131,9 @@ body {
   margin-left: auto;
 }
 
-.site-contact .list {
+.header .contact-tel,
+.header .contact-mail {
+  display: inline-block;
   color: var(--secondary-text-color);
 }
 
@@ -176,6 +178,7 @@ body {
 
   color: var(--secondary-white-color);
   background-color: var(--accent-color);
+  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   cursor: pointer;
 }
@@ -186,7 +189,7 @@ body {
 }
 
 .advant .item {
-  width: 270px;
+  width: calc((100%-3 * 30) / 4);
 }
 
 .advant .item:not(:last-child) {
@@ -231,6 +234,7 @@ body {
 
 .directions .list {
   display: flex;
+  justify-content: center;
 }
 
 .directions .item:not(:last-child) {
@@ -240,10 +244,6 @@ body {
 /* Наша команда */
 .our-team {
   background-color: #f5f4fa;
-}
-
-.our-team .container {
-  outline: 1px solid brown;
 }
 
 .our-team .title {
@@ -259,6 +259,7 @@ body {
 
 .our-team .list {
   display: flex;
+  justify-content: center;
 }
 
 .our-team .item {
@@ -267,6 +268,9 @@ body {
 
   text-align: center;
   background-color: var(--secondary-white-color);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0 0 4px 4px;
 }
 
 .our-team .item:not(:last-child) {
@@ -304,7 +308,6 @@ body {
 .footer .container {
   padding-top: 60px;
   padding-bottom: 60px;
-  outline: 1px solid red;
 }
 
 /* logo */
@@ -312,18 +315,16 @@ body {
   display: inline-block;
   margin-bottom: 20px;
   color: var(--secondary-white-color);
-  background-color: blue;
 }
 
 /* Адрес города и улицы */
 .city-street {
-  margin: 0;
+  margin-bottom: 6px;
   font-style: normal;
   font-size: 14px;
   line-height: 1.7;
   letter-spacing: 0.03em;
   color: var(--secondary-white-color);
-  background-color: red;
 }
 
 .footer-contacts {
@@ -333,11 +334,16 @@ body {
 /* Наши контакты в подвале страницы */
 .footer-mail,
 .footer-tel {
+  display: inline-block;
   font-style: normal;
   font-size: 14px;
   line-height: 1.7;
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
+}
+
+.footer-mail {
+  margin-bottom: 6px;
 }
 
 .footer-mail:hover,
@@ -352,11 +358,6 @@ body {
 
 /*--------------------Стили для страницы Портфолио---------------- */
 /* Навигация продуктов */
-.products .container {
-  padding-top: 94px;
-  padding-bottom: 94px;
-}
-
 .products-title {
   margin: 0;
 }
@@ -364,10 +365,10 @@ body {
 .nav-list {
   display: flex;
   justify-content: center;
-  margin-bottom: 34px;
+  margin-bottom: 50px;
 }
 
-.nav-item:not(:last-child) {
+.products .nav-item:not(:last-child) {
   margin-right: 8px;
 }
 
@@ -384,33 +385,48 @@ body {
   border-radius: 4px;
   cursor: pointer;
 }
-
 .nav-item .button:hover,
 .nav-item .button:focus {
   color: var(--secondary-white-color);
   background-color: var(--accent-color);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 /* Продукты компании */
 .products-list {
   display: flex;
   flex-wrap: wrap;
+  margin-left: -30px;
+  margin-top: -30px;
 }
 
-.products .item {
-  width: 370px;
-  height: 404px;
+.products-item {
+  flex-basis: calc(100% / 3 - 30px);
+  max-width: 100%;
+  margin-left: 30px;
+  margin-top: 30px;
+}
+
+.item-content {
   background-color: var(--secondary-white-color);
 }
 
-.products .title {
+.img-description {
+  padding: 20px 24px;
+  border: 1px solid #eee;
+}
+
+.img-description .title {
+  margin: 0;
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
 }
 
-.products .text {
+.img-description .text {
+  margin: 0;
   font-size: 16px;
   line-height: 1.88;
   letter-spacing: 0.03em;
