--- a/css/style.css
+++ b/css/style.css
@@ -19,9 +19,9 @@ html {
 
 body {
   margin: 0;
+  font-family: roboto, sans-serif;
   color: var(--primary-text-color);
   background-color: var(--primery-white-color);
-  font-family: roboto, sans-serif;
 }
 
 /* Секция */
@@ -41,9 +41,9 @@ body {
 
 /* Общие стили для кнопок */
 .button {
-  border: 1px solid transparent;
   margin: 0;
   padding: 0;
+  border: 1px solid transparent;
 }
 
 /* Убираем стили у списков и ссылок */
@@ -76,7 +76,7 @@ body {
   display: block;
 }
 
-/* Одинаковые сили для акцентов */
+/* Одинаковые стили для акцентов */
 .accent {
   color: var(--accent-color);
 }
@@ -158,7 +158,6 @@ body {
 
 .hero-title {
   margin: 0 0 30px;
-
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
@@ -175,11 +174,12 @@ body {
   font-weight: 700;
   font-size: 16px;
   line-height: 1.75;
-
   color: var(--secondary-white-color);
+
   background-color: var(--accent-color);
   box-shadow: 0 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
+
   cursor: pointer;
 }
 
@@ -263,10 +263,11 @@ body {
 }
 
 .our-team .item {
-  width: 270px;
   padding-bottom: 30px;
+  width: 270px;
 
   text-align: center;
+
   background-color: var(--secondary-white-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -314,12 +315,14 @@ body {
 .footer .logo {
   display: inline-block;
   margin-bottom: 20px;
+
   color: var(--secondary-white-color);
 }
 
 /* Адрес города и улицы */
 .city-street {
   margin-bottom: 6px;
+
   font-style: normal;
   font-size: 14px;
   line-height: 1.7;
@@ -335,6 +338,7 @@ body {
 .footer-mail,
 .footer-tel {
   display: inline-block;
+
   font-style: normal;
   font-size: 14px;
   line-height: 1.7;
@@ -380,14 +384,17 @@ body {
   font-size: 16px;
   line-height: 1.63;
   letter-spacing: 0.03em;
-  color: var(--primary-text-color);
+  color: var(--primary-text-color);б
+
   background-color: #f5f4fa;
   border-radius: 4px;
+
   cursor: pointer;
 }
 .nav-item .button:hover,
 .nav-item .button:focus {
   color: var(--secondary-white-color);
+
   background-color: var(--accent-color);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
@@ -414,11 +421,15 @@ body {
 
 .img-description {
   padding: 20px 24px;
-  border: 1px solid #eee;
+
+  border-right: 1px solid #eee;
+  border-bottom: 1px solid #eee;
+  border-left: 1px solid #eee;
 }
 
 .img-description .title {
   margin: 0;
+
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
@@ -427,6 +438,7 @@ body {
 
 .img-description .text {
   margin: 0;
+  
   font-size: 16px;
   line-height: 1.88;
   letter-spacing: 0.03em;
