--- a/css/style.css
+++ b/css/style.css
@@ -12,8 +12,7 @@ html {
   --primary-text-color: #212121;
   --secondary-text-color: #757575;
   --accent-color: #2196f3;
-  /* --primery-white-color: #e5e5e5; */
-  --secondary-white-color: #fff;
+  --primery-white-color: #fff;
   --primery-black-color: #2f303a;
 }
 
@@ -21,8 +20,7 @@ body {
   margin: 0;
   font-family: roboto, sans-serif;
   color: var(--primary-text-color);
-  /* background-color: var(--primery-white-color); */
-  background-color: var(--secondary-white-color);
+  background-color: var(--primery-white-color);
 }
 
 /* Секция */
@@ -85,13 +83,13 @@ body {
 /* ----------------Стили для страницы Студия--------------- */
 /*---------Шапка страницы--------*/
 .header {
-  background-color: var(--secondary-white-color);
+  background-color: var(--primery-white-color);
+  border-bottom: 1px solid #ececec;
 }
 
 .header .container {
   display: flex;
   align-items: center;
-  border-bottom: 1px solid #ececec;
 }
 
 .header-nav {
@@ -166,7 +164,7 @@ body {
   line-height: 1.36;
   letter-spacing: 0.06em;
   text-transform: uppercase;
-  color: var(--secondary-white-color);
+  color: var(--primery-white-color);
 }
 
 .hero-button {
@@ -177,7 +175,7 @@ body {
   font-weight: 700;
   font-size: 16px;
   line-height: 1.75;
-  color: var(--secondary-white-color);
+  color: var(--primery-white-color);
 
   background-color: var(--accent-color);
   box-shadow: 0 4px 4px rgba(0, 0, 0, 0.15);
@@ -271,7 +269,7 @@ body {
 
   text-align: center;
 
-  background-color: var(--secondary-white-color);
+  background-color: var(--primery-white-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0 0 4px 4px;
@@ -317,7 +315,7 @@ body {
   display: inline-block;
   margin-bottom: 20px;
 
-  color: var(--secondary-white-color);
+  color: var(--primery-white-color);
 }
 
 /* Адрес города и улицы */
@@ -328,7 +326,7 @@ body {
   font-size: 14px;
   line-height: 1.7;
   letter-spacing: 0.03em;
-  color: var(--secondary-white-color);
+  color: var(--primery-white-color);
 }
 
 .footer-contacts {
@@ -395,7 +393,7 @@ body {
 
 .nav-item .button:hover,
 .nav-item .button:focus {
-  color: var(--secondary-white-color);
+  color: var(--primery-white-color);
 
   background-color: var(--accent-color);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
@@ -418,7 +416,7 @@ body {
 }
 
 .item-content {
-  background-color: var(--secondary-white-color);
+  background-color: var(--primery-white-color);
 }
 
 .img-description {
